--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 <body>
 <div class="wrap">
     <header>
-        <div class="modes">recyclingcatch / Solarclicker</div>
-        <h1>⚡ Green Energy Collector</h1>
-        <div class="subtitle">Sammle Energie: Klick, kaufe Panels, und erhalte automatische Produktion. (LocalStorage speichert alles)</div>
+        <div class="modes"></div>
+        <h1>Green Energy</h1>
+        <div class="subtitle"></div>
     </header>
 
     <div class="board">
@@ -102,8 +102,8 @@
             </div>
 
             <div style="display:flex; gap:12px; flex-wrap:wrap; margin-bottom:12px;">
-                <button class="bigbtn" id="sunBtn">☀️ Sonne sammeln</button>
-                <button class="bigbtn secondary" id="windBtn">🌬️ Wind sammeln</button>
+                <button class="bigbtn" id="sunBtn">☀️</button>
+                <button class="bigbtn secondary" id="windBtn">🌬️</button>
             </div>
 
             <div class="small muted">Klick-Power: <strong id="powerDisplay">1</strong></div>
@@ -114,16 +114,16 @@
         <div class="card">
             <div class="shop-item">
                 <div>Power +1</div>
-                <button id="buyPower" class="bigbtn secondary">Kaufen</button>
+                <button id="buyPower" class="bigbtn secondary">Buy</button>
             </div>
             <div class="shop-item">
                 <div>Solar Panel</div>
-                <button id="buyPanel" class="bigbtn secondary">Kaufen</button>
+                <button id="buyPanel" class="bigbtn secondary">Buy</button>
             </div>
         </div>
     </div>
 
-    <footer>Made with 💚 — LocalStorage aktiv</footer>
+    <footer>Made with 💚</footer>
 </div>
 
 <script>
