--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ h1 {
   word-break: keep-all;         /* keine Hyphen */
 }
 
+#task .operator-minus {
+  color: white; /* Minus wird weiß */
+}
+
 #inputContainer {
   display: flex;
   flex-direction: column;
@@ -118,6 +122,11 @@ function randomInt(min, max) {
   return Math.floor(Math.random() * (max - min + 1)) + min;
 }
 
+// Funktion um Minus farblich zu markieren
+function formatTask(text) {
+  return text.replace(/−/g, '<span class="operator-minus">−</span>');
+}
+
 function generateTask() {
   const pattern = randomInt(1, 3);
   let a, b, c, text;
@@ -146,7 +155,7 @@ function generateTask() {
     text = `(${a} − ${b}) ÷ ${c}`;
   }
 
-  document.getElementById("task").textContent = `${text} = ?`;
+  document.getElementById("task").innerHTML = formatTask(text) + " = ?";
   document.getElementById("answer").value = "";
   document.getElementById("answer").focus();
 }
