--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function generateTask() {
     text = `(${a} − ${b}) ÷ ${c}`;
   }
 
-  document.getElementById("task").textContent = `${text} = ?`;
+  document.getElementById("task").textContent = `${text} = `;
   document.getElementById("answer").value = "";
   document.getElementById("answer").focus();
 }
