--- a/index.html
+++ b/index.html
@@ -6,44 +6,37 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<!-- Pixel Font -->
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
 <style>
-html, body { height: 100%; margin: 0; }
-body {
-  display: grid;
-  place-items: center;          /* immer exakt mittig */
-  background: #000000;
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
-  overflow-x: hidden;           /* kein seitliches Rutschen */
 }
 
 #gameContainer {
   width: 90%;
   max-width: 700px;
-  padding: 20px;
-  background: #000000;
-  border-radius: 15px;
-  box-shadow: 0 0 25px rgba(255,255,255,0.08);
-  box-sizing: border-box;       /* stabil */
+  padding: 25px;
+  background: #000;
+  border-radius: 18px;
+  box-shadow: 0 0 25px rgba(255,255,255,0.1);
 }
 
 h1 {
-  font-size: 1.8em;
-  margin-bottom: 20px;
+  font-size: 1.6em;
+  margin-bottom: 25px;
   color: #4dd0e1;
-  font-family: 'Press Start 2P', cursive;
 }
 
 #task {
   font-size: 1.4em;
-  margin: 20px 0;
-  min-height: 50px;
-  font-family: 'Press Start 2P', cursive;
-  word-break: keep-all;         /* keine Hyphen */
+  margin: 25px 0;
 }
 
 #inputContainer {
@@ -54,37 +47,44 @@ h1 {
 
 #answer {
   width: 80%;
-  max-width: 400px;
+  padding: 12px;
   font-size: 1em;
-  padding: 10px;
-  border-radius: 10px;
+  border-radius: 12px;
   border: none;
-  margin-bottom: 15px;
   text-align: center;
-  box-sizing: border-box;
+  outline: none;
 }
 
 button {
-  padding: 12px 25px;
+  margin-top: 15px;
+  padding: 12px 30px;
   font-size: 1em;
+  border-radius: 12px;
   border: none;
-  border-radius: 10px;
   background: #2e7d32;
   color: white;
   cursor: pointer;
-  transition: all 0.2s;
 }
 
-button:hover { background: #4caf50; }
+button:hover {
+  background: #4caf50;
+}
 
-#message { margin-top: 20px; font-size: 1em; min-height: 40px; }
-#score { margin-top: 15px; font-size: 1em; color: #ffeb3b; }
+#message {
+  margin-top: 20px;
+  font-size: 1em;
+  min-height: 40px;
+}
+
+#score {
+  margin-top: 15px;
+  font-size: 1em;
+  color: #ffeb3b;
+}
 
 @media (max-width: 768px) {
-  h1 { font-size: 1.4em; }
-  #task { font-size: 1.2em; }
-  #answer { font-size: 0.9em; }
-  button { font-size: 0.9em; padding: 10px 20px; }
+  h1 { font-size: 1.3em; }
+  #task { font-size: 1.1em; }
 }
 </style>
 </head>
@@ -127,7 +127,7 @@ function generateTask() {
     b = randomInt(4, 15);
     c = randomInt(5, 40);
     correctAnswer = (a * b) - c;
-    text = `(${a} × ${b}) − ${c}`;
+    text = `(${a} × ${b}) - ${c}`;
   }
 
   if (pattern === 2) {
@@ -143,10 +143,10 @@ function generateTask() {
     correctAnswer = randomInt(5, 20);
     b = randomInt(5, 30);
     a = (correctAnswer * c) + b;
-    text = `(${a} − ${b}) ÷ ${c}`;
+    text = `(${a} - ${b}) ÷ ${c}`;
   }
 
-  document.getElementById("task").textContent = `${text} = `;
+  document.getElementById("task").textContent = `${text} = ?`;
   document.getElementById("answer").value = "";
   document.getElementById("answer").focus();
 }
