--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ function startWordChain(){
   stage='word';
   const container=document.getElementById('gameContainer');
   container.innerHTML=`
-   <h1></h1>
+    <h1></h1>
   <div id="wordDisplay">Apple</div>
 
   <div id="inputContainer">
@@ -200,7 +200,18 @@ function startWordChain(){
     opacity:0;
     transition: opacity 0.5s;
   "></div>
-`; 
+`;
+ function showWordChainHint(){
+  const hint = document.getElementById('wordHint');
+  if(!hint) return;
+
+  hint.textContent = "🧠 Nur die richtigen Wörter bringen dich weiter.";
+  hint.style.opacity = "1";
+
+  setTimeout(()=>{
+    hint.style.opacity = "0";
+  }, 3000);
+}
   currentWord='Apple'; usedWords=[currentWord];
   wordList=["Algorithm","Entropy","Hypothesis","Paradox","Labyrinth",
   "Quantum","Syntax","Recursion","Neural","Topology",
@@ -217,18 +228,7 @@ function playWord(){
 if(word.length < 6){
   message.textContent = "❌ Wrong";
   return;
-function showWordChainHint(){
-  const hint = document.getElementById('wordHint');
-  if(!hint) return;
-
-  hint.textContent = "🧠 Nur die richtigen Wörter bringen dich weiter.";
-  hint.style.opacity = "1";
-
-  setTimeout(()=>{
-    hint.style.opacity = "0";
-  }, 3000); // nach 3 Sekunden weg
 }
-
 
 
   // Kein gleicher Endbuchstabe wie davor
@@ -252,13 +252,22 @@ if(word.slice(-1).toLowerCase() === lastTwo[0]){
 function aiTurn(){
   const lastChar = currentWord.slice(-1).toLowerCase();
   let possible = wordList.filter(
+  function aiTurn(){
+  const lastChar = currentWord.slice(-1).toLowerCase();
+
+  let possible = wordList.filter(
+    w => w[0].toLowerCase() === lastChar && !usedWords.includes(w)
+  );
+
+  // 🤖 keine sichtbaren Wörter → Brain Hint
+  if(possible.length === 0){
+    setTimeout(showWordChainHint, 5000);
+    return;
+  }
     w => w[0].toLowerCase() === lastChar && !usedWords.includes(w)
   );
 
   if(possible.length === 0){
-  setTimeout(showWordChainHint, 5000); // ⏱ nach 5 Sekunden Hinweis
-  return;
-} 
     const remaining = wordList.filter(w => !usedWords.includes(w));
     if(remaining.length > 0){
       const r = remaining[Math.floor(Math.random() * remaining.length)];
