--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 html, body { height: 100%; margin: 0; }
 body {
   display: grid; place-items: center;
-  background: #000; color: white;
+  background: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),
+    url("container-bg.jpg") center / cover no-repeat; color: white;
   font-family: Arial, Sans-Pixel; text-align: center;
 }
 #gameContainer {
   width: 90%; max-width: 700px; min-height: 520px;
-  padding: 20px; background: #000; border-radius: 15px;
+  padding: 20px; background: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),
+    url("container-bg.jpg") center / cover no-repeat; border-radius: 15px;
   box-shadow: 0 0 25px rgba(255,255,255,0.08);
   display: flex; flex-direction: column; align-items: center; justify-content: center;
+  url("container-bg.jpg")
 }
   #tipButton {
   position: fixed;
