--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@ body {
  /* Hintergrundbild von Pexels – Foto von Markus Spiske */
   background: url('https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg') no-repeat center center;
   background-size: cover;
-  background 
-  color: black;
+  color: whith;
   font-family: Arial, Sans-Pixel; text-align: center;
 }
 #gameContainer {
   width: 90%; max-width: 700px; min-height: 520px;
-  padding: 20px;  border-radius: 15px;
+  padding: 20px; background:#000 ; border-radius: 15px;
   box-shadow: 0 0 25px rgba(255,255,255,0.08);
   display: flex; flex-direction: column; align-items: center; justify-content: center;
 }
