--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@ button:hover { background: #00000000; }
   font-size: 0.8em;
   color: whith;
 }
+
+/* ➕ Zeilenumbrüche korrekt anzeigen */
+.modal-content p {
+  white-space: pre-line;
+}
 </style>
 </head>
 <body>
@@ -128,30 +133,30 @@ const closeBtn = document.querySelector('.close');
 tipButton.onclick = () => {
   let tipText = '';
   if(stage === 'start') tipText = `
-    <p>BrainTrials:<p>
-    <p>BrainTrials is a deterministic, rule-based cognitive system designed to validate structured human input under real-time constraints.</p>
+    BrainTrials:
+    BrainTrials is a deterministic, rule-based cognitive system designed to validate structured human input under real-time constraints.
 
-<p>The system does not rely on dictionaries, artificial intelligence, machine learning, or probabilistic guessing.</p>
-<p>All outcomes are derived exclusively from explicit rules, state transitions, and input validation logic.</p>
+The system does not rely on dictionaries, artificial intelligence, machine learning, or probabilistic guessing.
+All outcomes are derived exclusively from explicit rules, state transitions, and input validation logic.</p>
 
-<p>Each interaction is processed synchronously, ensuring immediate feedback without latency, freezing, or hidden computation.</p>
-<p>Invalid inputs are rejected through rule violations rather than semantic interpretation.</p>
+Each interaction is processed synchronously, ensuring immediate feedback without latency, freezing, or hidden computation.
+Invalid inputs are rejected through rule violations rather than semantic interpretation.</p>
 
-<p>The architecture enforces progression through constrained stages, where advancement depends on consistency, pattern recognition, and temporal accuracy.</p>
-<p>This design results in a system that is resistant to brute-force input, random noise, and exploit attempts.</p>
+The architecture enforces progression through constrained stages, where advancement depends on consistency, pattern recognition, and temporal accuracy.
+This design results in a system that is resistant to brute-force input, random noise, and exploit attempts.
 
-<p>BrainTrials functions as a closed logical environment: correctness emerges from structure, not from stored knowledge.</p>
-<p>All challenges are deterministic and reproducible, providing a consistent and fair testing arena for users.</p>
+BrainTrials functions as a closed logical environment: correctness emerges from structure, not from stored knowledge.
+All challenges are deterministic and reproducible, providing a consistent and fair testing arena for users.
 
-<p>The system implements multiple game modes—Word Chain, Tic-Tac-Toe, Math Challenge, and Chromatic Trial—each designed to test a different aspect of cognitive processing, including memory, pattern recognition, strategic planning, and rapid decision-making.</p>
+The system implements multiple game modes—Word Chain, Tic-Tac-Toe, Math Challenge, and Chromatic Trial—each designed to test a different aspect of cognitive processing, including memory, pattern recognition, strategic planning, and rapid decision-making.
 
-<p>Scoring and progression are strictly governed by rules: success depends on precise input, temporal accuracy, and pattern recognition rather than guesswork or probabilistic methods. Users cannot bypass challenges using brute-force or random strategies.</p>
+Scoring and progression are strictly governed by rules: success depends on precise input, temporal accuracy, and pattern recognition rather than guesswork or probabilistic methods. Users cannot bypass challenges using brute-force or random strategies.
 
-<p>BrainTrials is optimized for instantaneous feedback, ensuring that each action triggers an immediate and deterministic response. The system’s internal logic prevents hidden operations, caching, or delayed evaluation, guaranteeing transparency in every interaction.</p>
+BrainTrials is optimized for instantaneous feedback, ensuring that each action triggers an immediate and deterministic response. The system’s internal logic prevents hidden operations, caching, or delayed evaluation, guaranteeing transparency in every interaction.
 
-<p>Tips: Pay attention to the structure of the system. Logical consistency, awareness of patterns, and strategic foresight are essential to advance. Each game mode builds upon the principles of the previous, requiring both analytical thinking and adaptive strategy.</p>
-    <p>You are entering the arena of challenges!</p>
-    <p>Only those who think cleverly, react quickly, and recognize patterns can reach the end.</p>
+Tips: Pay attention to the structure of the system. Logical consistency, awareness of patterns, and strategic foresight are essential to advance. Each game mode builds upon the principles of the previous, requiring both analytical thinking and adaptive strategy.
+    You are entering the arena of challenges!</p>
+    Only those who think cleverly, react quickly, and recognize patterns can reach the end.
   `;
 
   else if(stage === 'word') tipText = `
