--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
   background-color: #00000000;
 }
 .modal-content {
-  background-color: #00000000;
+  background-color: #000000cc;
   margin: 15% auto;
   padding: 20px;
   border-radius: 12px;
@@ -59,7 +59,7 @@ body {
   overflow-y: auto;  /* scrollen, wenn Text zu lang ist */
 }
 .close {
-  color: #d50000;
+  color: whith;
   float: right;
   font-size: 28px;
   font-weight: bold;
