--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@ const tipModal = document.getElementById('tipModal');
 const closeBtn = document.querySelector('.close');
 
 tipButton.onclick = () => {
+  if(tipModal.classList.contains('visible')) {
+    tipModal.style.display = 'none';
+    tipModal.classList.remove('visible');
+    return;
   let tipText = '';
   if(stage === 'start') tipText = `
    <p><strong>BrainTrials</strong></p>
