--- a/index.html
+++ b/index.html
@@ -125,11 +125,7 @@ const tipButton = document.getElementById('tipButton');
 const tipModal = document.getElementById('tipModal');
 const closeBtn = document.querySelector('.close');
 
-tipButton.onclick = () => {
-  if(tipModal.classList.contains('visible')) {
-    tipModal.style.display = 'none';
-    tipModal.classList.remove('visible');
-    return;
+tipButton.onclick+++ = () => {
   let tipText = '';
   if(stage === 'start') tipText = `
    <p><strong>BrainTrials</strong></p>
