--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
-html, body { height: 100%; margin: 0; }
+/* ===================== START BUTTON – SYSTEM CENTER ===================== */
+#startBtn {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+  html, body { height: 100%; margin: 0; }
 body {
   display: grid; place-items: center;
  /* Hintergrundbild von Pexels – Foto von Markus Spiske */
@@ -106,10 +113,12 @@ button:hover { background: #00000000; }
   display: block;
 }
 #systemHeader {
+  letter-spacing: 2px;
+  color: #00ff88;
   position: absolute;
   top: 20px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-52%);
   font-family: 'Press Start 2P', cursive;
   font-size: 1.1em;
   color: white;
@@ -124,7 +133,7 @@ button:hover { background: #00000000; }
  <div id="systemHeader">
     BRAINTRIALS SYSTEM
   </div> 
-  <button onclick="startWordChain()">  START  </button>
+  <button id="startBtn" onclick="startWordChain()">START</button>
 </div>
   <!-- Tip Button -->
 <button id="tipButton">❗️</button>
