--- a/index.html
+++ b/index.html
@@ -442,15 +442,15 @@ function renderBoard(){
     b.appendChild(d);
   });
 }
-function randomColor(){const c=["#ba68c8",
-"#64b5f6",
-"#81c784",
-"#A0522D",
-"#ffb74d",
-"#808080",
-"#e57373",
+function randomColor(){const c=["#808080",
+"",
+"",
+"",
+"",
+"",
+"",
 "#ffffff",
-"#4dd0e1"]; return c[Math.floor(Math.random()*c.length)];}
+""]; return c[Math.floor(Math.random()*c.length)];}
 function startTimer(){clearInterval(timerInterval); timer=10; updateTimerUI(); timerInterval=setInterval(()=>{timer--; updateTimerUI(); if(timer===0){clearInterval(timerInterval); aiMove();}},1000);}
 function updateTimerUI(){const d=document.getElementById('timer'); let seconds = String(timer).padStart(2, '0'); d.textContent=`00:${seconds}`; d.className=''; if(timer>=8)d.classList.add('timer-green'); else if(timer>=5)d.classList.add('timer-yellow'); else d.classList.add('timer-red');}
 function playerMove(i){if(board[i]!=='') return; board[i]='X'; clearInterval(timerInterval); renderBoard(); if(checkWinner('X')){ gameOver=true; ticScore.player++; document.getElementById('message').textContent="You win!"; updateScore(); if(ticScore.player>=3){ setTimeout(startMathChallenge,800);} else { setTimeout(resetBoard,800);} return;} if(board.every(c=>c!=='')){ gameOver=true; ticScore.draw++; updateScore(); setTimeout(resetBoard,800); return;} setTimeout(aiMove,400);}
