--- a/index.html
+++ b/index.html
@@ -683,3 +683,10 @@ function showChromaticWin(){
 </script>
 </body>
 </html>
+
+
+<!--
+BrainTrials
+Created by Gëzim Hasani
+All rights reserved.
+-->
