--- a/index.html
+++ b/index.html
@@ -683,10 +683,20 @@ function showChromaticWin(){
 </script>
 </body>
 </html>
+<!--BrainTrials
 
-
-<!--
-BrainTrials
 Created by Gëzim Hasani
+© 2025
+
+This project is protected by copyright law.
+Copying, selling, or redistributing this project
+or parts of it without permission is prohibited.
+
+
+
+
+
 All rights reserved.
 -->
+
+
