--- a/index.html
+++ b/index.html
@@ -105,20 +105,6 @@ button:hover { background: #00000000; }
 .modal.open {
   display: block;
 }
-#startScreen {
-  position: fixed;
-  inset: 0;
-  background: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 3000;
-}
-#startScreen img {
-  max-width: 90%;
-  height: auto;
-  cursor: pointer;
-}
 /* ===== PASSWORD OVERLAY ===== */
 #passwordOverlay {
   position: fixed;
@@ -164,6 +150,21 @@ button:hover { background: #00000000; }
   opacity: 0;
   transition: opacity 0.3s;
 }
+  #startScreen {
+  position: fixed;
+  inset: 0;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3000;
+}
+#startScreen img {
+  max-width: 90%;
+  height: auto;
+  cursor: pointer;
+}
+
 </style>
 </head>
 <body>
@@ -172,7 +173,7 @@ button:hover { background: #00000000; }
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button id="passwordBtn">Enter</button>
     <div id="passwordError">Wrong password!</div>
-
+  </div>
 
   <!-- Flow-Bild Start -->
   <div id="startScreen">
